discussion/kv_engine/181931/181931_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50423: Merge remote-tracking branch 'mad-hatter' into cheshire-cat

* couchbase/mad-hatter:
  MB-50423: Allow PagingVisitor to remove deleted item metadata

Change-Id: Ic0a99ea3ad53f2e5ff462fa52bba810de451f941

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-10-27 08:30:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-10-27 08:31:06.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/322042/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 09:08:46.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/365/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: use of undeclared identifier "ENGINE_EWOULDBLOCK"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/365/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/365/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/374/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/374/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/359/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15: error: use of undeclared identifier "ENGINE_EWOULDBLOCK" [clang-diagnostic-error]
    ASSERT_EQ(ENGINE_EWOULDBLOCK, gv.getStatus());
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:391:15: error: use of undeclared identifier "ENGINE_SUCCESS" [clang-diagnostic-error]
    ASSERT_EQ(ENGINE_SUCCESS, gv.getStatus());
              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/359/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: use of undeclared identifier "ENGINE_EWOULDBLOCK" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/359/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/531/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(385): error C2065: "ENGINE_EWOULDBLOCK": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/531/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/385/ : FAILURE

Compile error at [2022-10-27T08:42:59.584Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: use of undeclared identifier "ENGINE_EWOULDBLOCK"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/385/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/390/ : FAILURE

Compile error at [2022-10-27T09:04:51.646Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: use of undeclared identifier "ENGINE_EWOULDBLOCK"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/390/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/368/ : FAILURE

Compile error at [2022-10-27T09:05:07.531Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: ?ENGINE_EWOULDBLOCK? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/368/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/291/ : FAILURE

Compile error at [2022-10-27T09:04:46.662Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: ?ENGINE_EWOULDBLOCK? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/291/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/377/ : FAILURE

Compile error at [2022-10-27T09:07:14.487Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:385:15:
error: use of undeclared identifier "ENGINE_EWOULDBLOCK"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/377/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20801/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
